# openbrewery_fastapi_tortoiseORM

./: .gitignore  .pre-commit-config.yaml  CHANGLELOG.md  LICENSE  Pipfile  Procfile  README.md  aerich.ini  alembic.ini  gunicorn.config.py  gunicorn_config.py  locustfile.py  logging.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 208f5c54ce40_first.py
app/: __init__.py  aerich.ini  ca-certificate.crt  config.py  crud.py  db.py  desc.py  log.py  logger.py  main.py  models.py
app/alembic/: env.py
app/api/: __init__.py  beer.py  crud.py  ping.py  sponsors.py
app/migrations/: 2020_11_06_232152_create_brewers_table.py  2020_11_07_030455_create_breweries_table.py  __init__.py
app/migrations/models/: 1_20201102202352_None.json
app/models/: __init__.py  brewery.py  pydantic.py  tortoise.py
app/routers/: beer.py  crud.py  schemas.py  sponsors.py
migrations/models/: 0_20201206002115_init.sql  1_20201206010711_sponsors_github_id.sql
tests/: __init__.py  conftest.py  test_breweries.py  test_sponsors.py
tests/unit/: test_helpers.py
