[tool.poetry]
name = "qrfastapi"
version = "0.0.1"
description = "Simple FastAPI on Beers and QR Codes"
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
qrcode = {extras = ["pil"], version = "^6.1"}
fastapi = {extras = ["all"], version = "^0.61.1"}
psycopg2-binary = "^2.8.6"
tortoise-orm = "^0.16.17"
asyncpg = "^0.21.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-picked = "^0.4.4"
pytest-emoji = "^0.2.0"
pytest-xdist = "^2.1.0"
pytest-clarity = "^0.3.0-alpha.0"
pytest-cov = "^2.10.1"
pytest-html = "^2.1.1"
pytest-mimesis = "^1.1.0"
vcrpy = "^4.1.1"
pytest-vcr = "^1.0.2"
mimesis = "^4.1.2"
pretty-errors = "^1.2.18"
prettyprinter = "^0.18.0"
ipython = "^7.18.1"
rich = "^9.1.0"
pre-commit = "^2.7.1"
python-dotenv = "^0.14.0"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --emoji -vvv"
xfail_strict = "True"
markers = [
  "smoke",
  "fire",
  "verify"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
