[tool.poetry]
name = "qrfastapi"
version = "0.0.1"
description = "Simple FastAPI on Beers and QR Codes"
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.1"}
gunicorn = "^20.0.4"
httpx = "^0.16.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.16.18"}
backpack = "^0.1"
pendulum = "^2.1.2"
loguru = "^0.5.3"
sentry-sdk = "^0.19.4"
logdna = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-picked = "^0.4.4"
pytest-emoji = "^0.2.0"
pytest-xdist = "^2.1.0"
pytest-clarity = "^0.3.0-alpha.0"
pytest-cov = "^2.10.1"
pytest-html = "^2.1.1"
pytest-mimesis = "^1.1.0"
vcrpy = "^4.1.1"
pytest-vcr = "^1.0.2"
mimesis = "^4.1.2"
pretty-errors = "^1.2.18"
prettyprinter = "^0.18.0"
ipython = "^7.18.1"
rich = "^9.1.0"
interrogate = "^1.3.1"
respx = "^0.14.0"
pre-commit = "^2.8.2"
environs = "^9.0.0"
python-dotenv = {extras = ["cli"], version = "^0.15.0"}
dump-env = "^1.2.0"
pyperclip = "^1.8.1"
pytest-pythonpath = "^0.7.3"
backpack = "^0.1"
pytest-asyncio = "^0.14.0"
jupyterlab = "^2.2.9"
pytest-randomly = "^3.5.0"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --randomly-seed=last --diff-type=split --emoji -vvv -p no:warnings"
xfail_strict = "True"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
verbose = 1
quiet = false
color = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
